istio/peerauth-strict.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: secure
spec:
  mtls:
    mode: STRICT
