istio/authz-allow-gateway-to-users-pay.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-from-gateway-to-users
  namespace: secure
spec:
  selector:
    matchLabels:
      app: users
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/secure/sa/default"]
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-from-gateway-to-pay
  namespace: secure
spec:
  selector:
    matchLabels:
      app: pay
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/secure/sa/default"]
